Opened 11 years ago
Closed 11 years ago
#4864 closed bug (fixed)
message ports not being reaped/reclaimed
Reported by: | augiedoggie | Owned by: | axeld |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | System/Kernel | Version: | R1/alpha1 |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
When this problem occurs all currently running applications will just vanish when you attempt to use them and no new applications will launch. For example, trying to run lpe gives an error about bad port id.
I first noticed this when running the ruby test suite, but now I've had it happen even during regular use of Haiku. The ruby test suite is guaranteed to reproduce the problem.
I'm attaching a verbatim copy of my syslog which gives some interesting error messages at the end. There is a lot of noise in the syslog due to the fact that my computer is under almost constant ssh brute force attacks.
I hate to file such a generic bug report, but my system becomes unusable when this starts happening so it's difficult to gather data. Filing this one under Servers/registrar since I've seen some really old bug reports where this was the problem.
Attachments (1)
Change History (5)
by , 11 years ago
comment:1 by , 11 years ago
Component: | Servers/registrar → System/Kernel |
---|---|
Owner: | changed from | to
Summary: | application/system crash(ports/registrar problem?) → message ports not being reaped/reclaimed |
comment:2 by , 11 years ago
Just to give some examples....
The system "loses" 10 ports for each launch and quit of BeZilla, and at least 3 for each launch of the ruby interpreter. Just running 'ruby' and then killing it with a Ctrl-C shows this behavior.
I'm posting a copy of the ruby optional package here in case someone would like to test with it. unzip -d /boot ruby-1.9.1-x86-gcc2-2009-10-28.zip to install.
My system uses approximately 125-150 ports right after boot. After running for a few hours, I have one BeZilla window and one Terminal window open, I'm seeing 440 ports used.
comment:3 by , 11 years ago
Status: | new → assigned |
---|
comment:4 by , 11 years ago
Resolution: | → fixed |
---|---|
Status: | assigned → closed |
Thanks! I didn't notice yet. Fixed in hrev33823.
While running a 'watch listport' within a terminal I can see that running certain applications or when an application crashes the number of used ports doesn't go back down to the same number as before the application was started. I think there is a gradual build up of these zombie ports which are not being reclaimed by the system.