* delete_owned_ports() did not maintain the sUsedPorts variable, and thus led   to bug #4864.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@33823 a95241bf-73f2-0310-859d-f6bbb57e9c96